Prevent Slider From overflowing + add Gif Works Buffel

--- a/css/about.css
+++ b/css/about.css
@@ -368,3 +368,7 @@ div > .uno {
 .slider-container .card {
   background-color: transparent;
 }
+
+.section {
+  overflow: hidden;
+}
